# pi-deepseek

./: .gitignore  README.md  package.json  pi-gui-plugin-integration.md  pnpm-lock.yaml
.github/workflows/: release-desktop.yml  release.yml
.pi/extensions/pi-open-design/: open-design.manifest.json  package.json
apps/desktop/: README.md  electron-builder-test.yml  electron-builder.yml  index.html  package.json
apps/desktop-tauri/: build-tauri.sh  package.json  vite.config.ts
apps/desktop-tauri/scripts/: stage-runtime.mjs
apps/desktop-tauri/sidecar/: build.mjs  server.ts
apps/desktop-tauri/src/: index.html  main.tsx  pi-app-shim.ts
apps/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-tauri/src-tauri/capabilities/: default.json
apps/desktop-tauri/src-tauri/src/: lib.rs  main.rs
apps/desktop/electron/: app-store-composer.ts  app-store-persistence.ts  app-store-workspace.ts  app-store-worktree.ts  app-store.ts  connect-phone-install.ts  ensure-path.ts  im-message-store.ts  im-webhook-server.ts  main.ts  notification-permission.ts  preload.ts  seed-extensions.ts  update-checker.ts  weixin-bridge-runtime.ts
apps/desktop/resources/: icon.icns
apps/desktop/scripts/: after-pack-slim.mjs  assert-packaged-runtime-deps.mjs  build-notification-status-helper.mjs  docker-build-win-linux.sh  first-run-smoke.mjs  stage-mcp-bridge.mjs
apps/desktop/src/: App.tsx  composer-panel.tsx  composer-surface.tsx  desktop-state.ts  (+23 more)
plans/: claw-im-workflow.md  deepseek-doctor-pr-plan.md
plans/phase-1-codex-parity/: plan.md
plans/pi-app-mvp/: plan.md
(+28 files in other folders)
